Fix Audience card carousel gap

--- a/src/components/pages/Common/Audience/Audience.scss
+++ b/src/components/pages/Common/Audience/Audience.scss
@@ -1,19 +1,31 @@
 .audiences_container {
    padding: 88px 0;
    background: linear-gradient(180deg, rgba(6, 13, 11, 0.00) 0%, #060D0B 78.54%);
+   .products_carousel {
+      max-width: 1200px;
+      width: 100%;
+      margin-top: 3.5rem;
+   }
 
    @media screen and (max-width: 767px) {
       margin-block: 120px;
-   }
-
-   .products_carousel {
-      margin-top: 3.5rem;
+      .products_carousel {
+         width: 380px !important;
+      }   
    }
 }
 
+.owl-item {
+   width: 33%;
+
+   @media screen and (max-width: 767px) {
+      width: 100%;
+   }
+} 
+
 .audience-card {
    display: flex;
-   width: 387px !important;
+   // width: 33%;
    height:194px;
    border-radius: 16px;
    border: 1px solid #151729;
@@ -23,10 +35,10 @@
       rgba(255, 255, 255, 0.07) 140.9%
    );
    backdrop-filter: blur(10px);
-   margin-right: 24px;
+   margin-right: 12px;
    overflow: hidden;
-   @media screen and (max-width: 768px) {
-      width:356px !important;
+   @media screen and (max-width: 767px) {
+      // width: 100%;
    }
    .left_content {
       position: relative;
@@ -134,7 +146,7 @@
          top:75px;
       }
       .owl-nav .owl-next {
-         right: -20px;
+         right: -7px;
          top: 75px;
       }
 }
